kitten/reported_bugs/rust/rust-78336/stderr.txt
error[E0627]: yield expression outside of generator literal

  --> mutant.rs:60:21

   |

60 | MultiRegionStruct ( yield , y )

   |                     ^^^^^



error[E0308]: mismatched types

  --> mutant.rs:60:21

   |

60 | MultiRegionStruct ( yield , y )

   |                     ^^^^^ expected `&u32`, found `()`



thread 'rustc' panicked at 'assertion failed: body.yield_ty.is_some() && universal_regions.yield_ty.is_some() ||

    body.yield_ty.is_none() && universal_regions.yield_ty.is_none()', compiler/rustc_mir/src/borrow_check/type_check/input_output.rs:110:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (31530e5d1 2020-10-20) running on x86_64-unknown-linux-gnu



note: compiler flags: -C debuginfo=2 -C opt-level=z -C target-cpu=skylake --crate-type staticlib



query stack during panic:

#0 [mir_borrowck] borrow-checking `finds_explicit_bound`

#1 [type_of] computing type of `finds_explicit_bound::{opaque#0}`

end of query stack

error: aborting due to 2 previous errors



Some errors have detailed explanations: E0308, E0627.

For more information about an error, try `rustc --explain E0308`.

